# hass-mqtt-bridge

./: Cargo.toml  README.md  devenv.nix
.github/: renovate.json5
.github/workflows/: build_and_test.yml
end-to-end-testing/: docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml
end-to-end-testing/docker-compose/hass-mqtt-bridge/: Dockerfile
end-to-end-testing/docker-compose/hass/storage/: auth  auth_provider.homeassistant  person
end-to-end-testing/docker-compose/mosquitto/: acl.conf  mosquitto.conf  passwd
end-to-end-testing/fixtures/: index.ts  screenshots.ts  stack-utils.ts  test-platform.ts
end-to-end-testing/fixtures/pages/: HomePage.ts  LoginPage.ts  OnboardingPage.ts
end-to-end-testing/fixtures/pages/settings/: DeviceInfoPage.ts  DevicesPage.ts  MqttSettingsPage.ts
end-to-end-testing/pages/: LoginPage.ts  OnboardingPage.ts
end-to-end-testing/pages/settings/: DevicesPage.ts  MqttSettingsPage.ts
end-to-end-testing/tests/: rika-firenet.spec.ts
src/: cli.rs  main.rs  misc.rs  mqtt.rs  repeat.rs  rika.rs  somfy_protect.rs
