[package]
name = "hass-mqtt-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.4"
anyhow = "1.0"
async-stream = "0.3"
backoff = { version = "0.4", features = ["tokio"] }
chrono = "0.4"
clap = { version = "<4.6", features = ["derive", "cargo", "env"] }
derive-new = "0.7"
env_logger = "0.11"
futures = "0.3"
ha-mqtt-discovery = { git = "https://github.com/jeremiehuchet/ha-mqtt-discovery-rs.git" }
hostname = "0.4"
indoc = "2.0"
lazy_static = "1.0"
log = "0.4"
package_info = "0.1"
package_info_derive = "0.1"
regex = "1.0"
rika-firenet-client = { git = "https://github.com/jeremiehuchet/rika-firenet-api-rs.git" }
rumqttc = "0.23"
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
somfy-protect-client = { git = "https://github.com/jeremiehuchet/somfy-protect-api-rs.git" }
serde = "1.0"
serde_json = "1.0"
unicode-normalization = "0.1"
url = "2.5"